# pjplan

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml
.github/workflows/: deploy.yml
docs/: conf.py  index.rst  modules.rst  pjplan.io.rst  pjplan.rst  pjplan.viz.dhtmlx.rst  pjplan.viz.mermaid.rst  pjplan.viz.rst  project.ihp  requirements.in  requirements.txt  ru.tree
docs/en/: index.md  installation.md
docs/en/getting-started/: getting-started.ipynb
docs/ru/: index.md  index.rst  installation.md
docs/ru/getting-started/: getting-started.ipynb
examples/: README.md
examples/jupyter/calendar/: calendar.ipynb
examples/jupyter/critical-path/: critical-path.ipynb
examples/jupyter/dhtmlx-gantt/: dhtmlx-gantt.ipynb
examples/jupyter/forward-scheduler/: forward-scheduler.ipynb
examples/jupyter/getting-started/: getting-started.ipynb
examples/jupyter/mermaid-gantt/: mermaid-gantt.ipynb
examples/jupyter/mermaid-network/: mermaid-network.ipynb
examples/jupyter/pandas/: pandas.ipynb
examples/jupyter/print/: print.ipynb
examples/streamlit/dhtmlx-gantt/: main.py
examples/streamlit/mermaid-gantt/: main.py
examples/streamlit/mermaid-network/: main.py
src/pjplan/: __init__.py  calendar.py  resource.py  schedule.py  task.py  utils.py  wbs.py
src/pjplan/alg/: critical_path.py
src/pjplan/io/: __init__.py  csv_io.py  df_io.py  raw.py
src/pjplan/viz/: mermaid.py  tasksheet.py
tests/test_pjplan/: test_calendar.py  test_schedule.py  test_task.py  test_wbs.py
tests/test_pjplan/io/: test_csv_io.py
tests/test_pjplan/test_io/: test_csv_io.py
(+9 files in other folders)
