[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pjplan"
version = "0.0.3"
authors = [
  { name="Artem Snopkov", email="artem.snopkov@gmail.com" },
]
description = "Python library for plan projects"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/artem-snopkov/pjplan"
"Bug Tracker" = "https://github.com/artem-snopkov/pjplan/issues"